# joy

./: .gitignore  CMakeLists.txt  README.md  build.gradle  main11.cpp
.github/workflows/: android-build.yml  build.yml  web-build.yml
adventure_client/: CMakeLists.txt  Component.h  Context.h  MobileInputLayer.cpp  MobileInputLayer.h  Resources.cpp  Systems.cpp  Systems.h  adventure.pb.cc  adventure.pb.h  context.h  game_context.h  main.cpp  main2.cpp  mobile_input_layer.cpp  mobile_input_layer.h  proto.cpp  proto.h
adventure_client/components/: ai_component.h  attack_ray_effect_component.h  connection_component.h  enemy_component.h  id_component.h  logic_position_component.h  logic_rect_component.h  logic_velocity_component.h  player_action_component.h  player_component.h  sprite_sheet_component.h  transform_component.h
adventure_client/layers/: debug_layer.cpp  debug_layer.h  gameplay_controls_layer.cpp  gameplay_controls_layer.h  menu_layer.cpp  menu_layer.h
adventure_client/protocol/: adventure.pb.h
adventure_client/scenes/: game_scene.cpp  game_scene.h  loading_scene.cpp  loading_scene.h
adventure_client/systems/: Systems.cpp  Systems.h  animation_update_system.h  drawing_attack_ray_effect_system.h  drawing_entity_system.h  effect_lifecycle_system.h  lerp_system.h  sprite_render_system.h  startup_system.h
adventure_server/: CMakeLists.txt  Component.h  Context.h  DebugLayer.cpp  DebugLayer.h  Resources.cpp  Resources.h  Systems.cpp  Systems.h  adventure  adventure.pb.cc  adventure.pb.h  app_context.h  asset_manager.cpp  asset_manager.h  context.h  debug_layer.cpp  main.cpp  proto.cpp  proto.h  utf8.c  utf8.h
adventure_server/components/: attack_ray_effect_component.h  connection_component.h  id_component.h  local_only_component.h  logic_position_component.h  logic_rect_component.h  logic_velocity_component.h  player_action_component.h  player_component.h  sprite_sheet_component.h  transform_component.h
adventure_server/layers/: debug_layer.cpp  debug_layer.h  gameplay_controls_layer.cpp  gameplay_controls_layer.h
adventure_server/protocol/: adventure.pb.cc  adventure.pb.h
adventure_server/scenes/: game_scene.cpp  game_scene.h  (+2 more)
core/: CMakeLists.txt
joy/: CMakeLists.txt  janimations.h  jaudio.c  jaudio.h  jbox2d.c  jbox2d.h  jcollision.c  jcore.c  jcore.h  jcsx.c  jecs.h  jfont.c  jfont.h  jgjk.h  jlight.c  jlight.h  jluax.c  jluax.h  jmath.h  jmodule.c  jnetwork.c  joy.c  jparticle.c  jparticle.h  jphysics.c  jphysics.h  jsx.c  jsx.h  jsys.c  jsys.h  jtext.c  jtext.h  jtextures.c  jtextures.h  jtilemap.c  jtilemap.h  jtilemap_render.c  jtilemap_render.h  jui.c  jui.h  (+1 more)
joy2d/: CMakeLists.txt  animations.c  animations.h  audio.h  collision.c  collision.h  config.h  core.c  core.h  csx.c  csx.h  ecs.c  ecs.h  env.c  env.h  gjk.c  gjk.h  graphics.c  graphics.h  hash.h  janimations.c  jaudio.c  jaudio.h  jcollision.c  jcollision.h  jcont.h  jcore.c  jcore.h  jcsx.c  jcsx.h  jecs.c  jgjk.c  jgjk.h  jluax.c  jluax.h  jmath.h  jmodule.h  jnetwork.c  jnetwork.h  jnetwork_emscripten.c  (+47 more)
joy2d/csclib/: collision.c  kcp.c  mathx.c  sdl.c  sys.c  utils.c
joy2d/jsclib/: base.c  fp.c  vec2f.c
joy2d/luaclib/: audio.c  c2s.c  camera.c  client.c  collision2d.c  ecs.c  graphics.c  joystick.c  loadlib.c  loadlibx.c  lockstep.c  mat22f.c  network.c  profiler.c  rigidbody.c  sdl.c  server.c  timer.c  ui.c  utils.c  vec2.c  vec3.c
joy2d/test/: ecs.c  truetype.c
joy2d_adventure/: CMakeLists.txt  main.cpp
joy2d_core/: CMakeLists.txt  audio.c  calculator.c  calculator.h  config.h  cont.h  iocp.h  joystick.c  lockstep.c  lockstep.h  log.h  luax.c  luax.h  mathx.h  mono.h  msgpack.h  network.h  physics.h  profiler.h  proto.h  sys.h  utils.h  vector.h
joy2d_csharp/: CMakeLists.txt  csx.c  csx.h  mathx.c  utils.c
joy2d_cslib/: CMakeLists.txt
joy2d_editor/: CMakeLists.txt  GJK.cpp  GJK.h  Shape.h  Simplex.h  T_FP.cpp  T_FP.h  T_Math.h  cgltf_impl.cpp  gjk2d_geometry.h  glad.c  glad.h  main.cpp  main2.cpp  main3.cpp  main4.cpp  main42.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main81.cpp  main9.cpp  proto.cpp  stbi_impl.cpp
joy2d_editor/assets/joy2d_editor_shaders/: frag.frag  frag.spv  shader.frag  shader.vert  vert.vert
joy2d_editor/assets/scripts/: client2.lua  server2.lua
joy2d_editor/joy2d_editor_assets/scripts/: test_tcpclient.lua
joy2d_editor/joy2d_editor_assets/shaders/: vert.spv
joy2d_js/: CMakeLists.txt  base.c  fp.c  jsclib.h  jsx.c  jsx.h  vec2.c  vec2f.c
joy2d_loader/: CMakeLists.txt  csx.c  jsx.c  jsx.h  luax.c  main.c  main.cpp
joy2d_loader/assets/joy2d_loader/scripts/: server_config.lua
joy2d_loader/assets/scripts/: test_tcpserver.lua
joy2d_loader/core/: config.h  cont.h  env.h  graphics.c  iocp.h  lockstep.c  lockstep.h  log.h  module.h  profiler.h  proto.h  sys.h
joy2d_loader/csclib/: collision.c  csclib.h  sdl.c
joy2d_loader/jsclib/: fp.c
joy2d_loader/luaclib/: animation.c  audio.c  c2s.c  client.c  ecs.c  graphics.c  joystick.c  lockstep.c  mat22f.c  mathx.c  network.c  rigidbody.c  ui.c  world2df.c
joy2d_loader/test/: ecs.c  klib.c
joy2d_lua/: CMakeLists.txt  animation.c  audio.c  c2s.c  camera.c  client.c  collision2d.c  collision3d.c  ecs.c  graphics.c  joystick.c  keyboard.c  loadlibx.c  luaclib.h  luax.c  luax.h  mat22f.c  mathx.c  network.c  profiler.c  rigidbody.c  s2c.c  sdl.c  server.c  timer.c  ui.c  utils.c  vec2.c  vec3.c  window.c  world2df.c
joy_beat/: CMakeLists.txt  main.cpp  test.lua
joy_cslib/: CMakeLists.txt
joy_editor/: CMakeLists.txt  GJK.cpp  animation_test.cpp  cgltf_impl.cpp  collision2d_test.cpp  gjk2d.h  gjk2d_core.h  gjk2d_geometry.h  light_test.cpp  main.cpp  main10.cpp  main11.cpp  main2.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main81.cpp  main9.cpp  particle_test.cpp  stbi_impl.cpp  ui_test.cpp
joy_editor/assets/joy2d_editor_scripts/: client_config.lua  server.js
joy_editor/assets/joy_editor_models/: air.glb
libevent/: CMakeLists.txt
protobuf/: CMakeLists.txt
src/: attributions.txt  csx.c  csx.h  joy.c  joy.h  liv-net.c  luax.h  main.c
src/core/: ecs.c  (+29 more)
(+98 files in other folders)
